# sluggy

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
sluggy/: Cargo.toml
sluggy/src/: config.rs  debouncer.rs  main.rs  server.rs  watch.rs
sluggy_core/: Cargo.toml
sluggy_core/src/: common.rs  error.rs  lazyfn.rs  lib.rs  store.rs  utils.rs
sluggy_core/src/generate/: config.rs  mod.rs  sections.rs
sluggy_core/src/generate/content/: loader.rs  mod.rs
sluggy_core/src/generate/html/: minifier.rs  mod.rs  rewriter.rs
sluggy_core/src/generate/syntect/: mod.rs
sluggy_core/src/generate/template/: functions.rs  mod.rs
sluggy_macros/: Cargo.toml
test-site/: sluggy.toml
test-site/content/: index.html  names.txt.tpl  page.md  test.html
test-site/content/_error/: 404.html
test-site/css/: _common.css  highlight.css  main.css
test-site/data/: images-thumbnail.json  images.toml
test-site/templates/: entry.html
test-site/templates/_layout/: layout.html
