[package]
name = "sluggy"
version = "0.0.1"
authors = ["Tyrone Tudehope"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
sluggy_core = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true, features = ["full"] }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
axum-extra = { workspace = true }
axum = { workspace = true, features = ["macros", "http2", "headers"] }
opentelemetry-otlp = { workspace = true }
opentelemetry_api = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, features = ["thiserror"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy = { workspace = true }
mime = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
toml = { workspace = true }
serde_json = { workspace = true }
comrak = { workspace = true, default-features = false }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tera = { workspace = true, features = ["preserve_order"] }
async-compression = { workspace = true, features = ["tokio", "brotli", "gzip", "zlib"] }
syntect = { workspace = true }
lightningcss = { workspace = true, features = ["browserslist"] }
lol_html = { workspace = true }
minify-html-onepass = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
