[package]
name = "sluggy_core"
version = "0.0.1"
edition = "2021"
authors = ["Tyrone Tudehope"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
comrak = { workspace = true, default-features = false }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tera = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
axum-extra = { workspace = true }
axum = { workspace = true, features = ["macros", "http2", "headers"] }
tracing = { workspace = true }
mime = { workspace = true }
futures = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "brotli", "gzip", "zlib"] }
syntect = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "serde"] }
lightningcss = { workspace = true, features = ["browserslist"] }
lol_html = { workspace = true }
minify-html-onepass = { workspace = true }
toml = { workspace = true }
json_pointer = { workspace = true }
notify = { workspace = true }
browserslist-rs = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
opentelemetry_api = { workspace = true }
imageless = { workspace = true }
mime_guess = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
jql = { workspace = true }
smallvec = { workspace = true }
itertools = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
